fix: page layout shifts

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ body::-webkit-scrollbar-thumb {
 
 .wrapper {
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-wrap: nowrap;
   align-items: stretch;
@@ -49,10 +50,6 @@ body::-webkit-scrollbar-thumb {
 
 .remove-sticky {
   position: unset;
-}
-
-.sticky-nav-full {
-  @apply border-b border-gray-200 border-opacity-50 dark:border-gray-600 dark:border-opacity-50;
 }
 
 .header-name {
